opam-version: "1.2"
name: "Camelthorn"
version: "0.0.5"
maintainer: "Yoshikawa Masashi <yoshikawa.masashi.yh8@is.naist.jp>"
authors: "Yoshikawa Masashi <yoshikawa.masashi.yh8@is.naist.jp>"
homepage: "https://github.com/masashi-y/Camelthorn"
bug-reports: "https://github.com/masashi-y/Camelthorn/issues"
license: "MIT"
dev-repo: "https://github.com/masashi-y/Camelthorn.git"
build: [
  "jbuilder" "build" "-p" "parser"
]
depends: [
  "jbuilder"   {build}
  "ppx_deriving_argparse"
  "psq"
  "ocaml-protoc"
  "ppx_monadic"
  "parmap"
  "containers"
]

available: [ ocaml-version >= "4.03.0" & opam-version >= "1.2" ]

