opam-version: "1.2"
name: "depccg"
version: "0.0.5"
maintainer: "Yoshikawa Masashi <yoshikawa.masashi.yh8@is.naist.jp>"
authors: "Yoshikawa Masashi <yoshikawa.masashi.yh8@is.naist.jp>"
homepage: "https://github.com/masashi-y/depccg.ml"
bug-reports: "https://github.com/masashi-y/depccg.ml/issues"
license: "MIT"
dev-repo: "https://github.com/masashi-y/depccg.ml.git"
build: [
    ["git" "submodule" "update" "--init"]
    [make "-f" "Makefile" "models" "LIBDIR=%{lib}%/%{name}%" "SHAREDIR=%{share}%/%{name}%"]
    ["jbuilder" "build" "@install" "-j" jobs]
]
install: [
    [make "-f" "Makefile" "install" "LIBDIR=%{lib}%/%{name}%" "SHAREDIR=%{share}%/%{name}%"]
    ["jbuilder" "install"]

]
depends: [
  "jbuilder"   {build}
  "ppx_deriving_argparse"
  "psq"
  "ocaml-protoc"
  "ppx_monadic"
  "parmap"
  "containers"
  "menhir"
  "shexp"
  "ppx_sexp_conv"
  "sexplib"
  "xml-light"
  "yaml"
]

available: [ ocaml-version >= "4.03.0" & opam-version >= "1.2" ]

